Closed Bug 11691 Opened 26 years ago Closed 26 years ago

[infinite loop] bugs - nsPop3Protocol.cpp

Categories

(MailNews Core :: Networking, defect, P3)

x86
Other
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jay, Assigned: mscott)

References

Details

Analysis of the code has determined possible infinite loop or problem in the code below. See bug http://bugzilla.mozilla.org/show_bug.cgi?id=11588 for more information nsPop3Protocol.cpp:530: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:561: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:665: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:1027: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:1133: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:1301: warning: unsigned value < 0 is always 0 nsPop3Protocol.cpp:1412: warning: unsigned value < 0 is always 0
Blocks: 11588
Summary: [infinite loop] bugs - nsPop3Protocol.cpp → [infinite loop] bugs - nsPop3Protocol.cpp
Status: NEW → ASSIGNED
Target Milestone: M10
Component: Browser-General → Networking-Mail
Product: Browser → MailNews
QA Contact: leger → lchiang
correcting component to mailnews.
The line numbers are now out of date due to code modifications in the file. How did we get these lines numbers in the first place? I couldn't find them in slamm's warning page nor by looking at a linux build log. I ask, so I can try to trigger them again to figure out the new line numbers I should look at. Thanks.
Jay/Chris, how did you guys generate these warnings? This file has changed a lot since the warnings were generated so the line numbers are all different. I wanted to generate the warnings again so I could match it up against the current contents of the file.
check bug 11588 for info on how to get a linux warning with the current line no. use -W
I've fixed these problems in nsPop3Protocol.cpp. I'll be checking it in today when the tree opens so no need to triage this bug further.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
I checked in the fix for this today.
Par, can you verify at your convenience?
QA Contact: lchiang → ppandit
VERIFIED based on code inspection of nsPop3Protocol.cpp. Par
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.