Bug #11691 --> fix some empty comparisons with a PRUint32 < 0.